fixed sidebar's issue on mobile

--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -7,7 +7,7 @@ body {
 }
 .header #bar {
 	display: block;
-	position: absolute;
+	position: fixed;
 	width: 50px;
 	height: 50px;
 	font-size: 40px;
@@ -55,7 +55,7 @@ body {
 	left: 0px;
 	z-index: 20;
 	width: 100%;
-	height: 100%;
+	height: 150%;
 }
 #bar-panel .backblack {
 	position: absolute;
